# Knowlink

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  TEAM_DIVISION.md  WEEKLY_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0a1b2c3d4e5f_merge_pgvector_and_lesson_heads.py  0d4ea7c5f2a9_add_qa_runtime_tables.py  17c0fea96cf7_.py  1b319cfadeb3_init_tables.py  20260418_0001_initial_scaffold.py  2f5c9f6a8b10_add_quiz_review_runtime_tables.py  4a6c1d9e8b20_add_handout_block_generation_metadata.py  4dbd5684c6e4_add_identity_to_course_id.py  74d9bc0a9e1c_add_handout_block_refs.py  8b7d4f2a91c0_add_handout_outline_read_model.py  9c2f4a1d7b30_extend_idempotency_records.py  9f42a7d8c6b1_add_bilibili_import_tables.py  a6c3d2f1e9b4_add_bilibili_import_recovery_fields.py  b7c8d9e0f1a2_add_current_course_flag.py  c7ad333c823e_.py  c8d9e0f1a2b3_merge_idempotency_and_bilibili_heads.py  d4e5f6a7b8c9_add_lessons_and_scoped_artifacts.py  d9e0f1a2b3c4_add_pgvector_hybrid_qa.py  e3f4a5b6c7d8_add_bilibili_preview_snapshots.py  e5f6a7b8c9d0_add_course_archive_delete_fields.py  f6a7b8c9d0e1_add_bilibili_import_item_lesson_id.py
client_flutter/: .metadata  README.md  pubspec.yaml
client_flutter/lib/: main.dart
client_flutter/test/: app_config_test.dart  app_router_test.dart  app_theme_test.dart  smoke_test.dart
client_flutter/web/: index.html  manifest.json
docs/: README.md  demo-assets-baseline.md  demo-assets-first-edition.md  development-scaffold.md  vivo-ai-integration-research.md  week4-demo-runbook.md
docs/contracts/: api-contract.md  error-codes.md  v2-bilibili-import-contract.md  v2-course-lesson-workbench-contract.md  week1-cao-le-freeze.md  week2-cao-le-parse-inquiry-contract.md
docs/engineering/: 2026-06-03-import-course-state-qa.md  development-scaffold.md
docs/research/: vivo-ai-integration.md
docs/v1/: architecture.md  demo-assets-baseline.md  demo-assets-first-edition.md  team-division.md  week4-demo-runbook.md  weekly-plan.md
docs/v2/: phase-plan.md  phase1-cao-le-handoff.md  phase2-course-lesson-workbench-handoff.md  test-handout.md  three-phase-design.md  yang-caiyi-api-overview.md  yang-caiyi-bilibili-import-dto.md  yang-caiyi-bilibili-import-integration-template.md  yang-caiyi-core-status-enums.md  yang-caiyi-course-api-dto.md  yang-caiyi-demo-assets-manifest.md  yang-caiyi-handout-api-dto.md  yang-caiyi-inquiry-api-dto.md  yang-caiyi-parse-task-dto.md  yang-caiyi-playback-url-integration.md  yang-caiyi-progress-api-dto.md  yang-caiyi-qa-api-dto.md  yang-caiyi-query-field-alignment.md  yang-caiyi-quiz-api-dto.md  yang-caiyi-recommendation-dto.md  yang-caiyi-resource-api-dto.md  yang-caiyi-v1-frozen-api-overview.md
recreate/: index.html
schemas/: __init__.py
scripts/: demo_assets_smoke.py  generate_real_outline_json.py  init_minio_bucket.py
server/: Dockerfile  __init__.py  app.py
(+347 files in other folders)
