[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowlink"
version = "0.1.0"
description = "KnowLink MVP scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.110.3",
  "uvicorn==0.30.6",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = "-q"
