[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowlink"
version = "0.1.0"
description = "KnowLink MVP scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.110.3",
  "uvicorn==0.30.6",
  "pydantic>=2.7,<3.0",
   # 数据库
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  # 任务队列
  "dramatiq>=1.17,<2.0",
  "redis>=5.0,<6.0",
  # 对象存储
  "minio>=7.2,<8.0",
  # 文件处理
  "python-multipart>=0.0.9",
  "httpx>=0.27,<1.0",
  "aiofiles>=24.0,<25.0",
  # AI/解析（MVP 需要）
  "openai>=1.54,<2.0",
  "pypdf>=4.0,<5.0",
  "python-pptx>=0.6,<1.0",
  "python-docx>=1.1,<2.0",
  # 工具
  "python-dotenv>=1.0,<2.0",
  "pydantic-settings>=2.4,<3.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "jsonschema>=4,<5",
]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = "-q"
pythonpath = ["."]
