[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowlink"
version = "0.1.0"
description = "KnowLink MVP scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.110.3",
  "uvicorn==0.30.6",
  "pydantic>=2.7,<3.0",
   # 数据库
   # 业务异步用
  "asyncpg>=0.29,<1.0",
  # alembic 迁移专用同步驱动
  "psycopg2-binary>=2.9,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "pgvector>=0.3,<1.0",
  "alembic>=1.13,<2.0",
  # 任务队列
  "dramatiq>=1.17,<2.0",
  "prometheus-client>=0.20,<1.0",
  "redis>=5.0,<6.0",
  # 对象存储
  "minio>=7.2,<8.0",

  # AI/解析（MVP 需要）
  "langchain>=1.3.1,<2.0",
  "langchain-core>=1.4,<2.0",
  "langchain-openai>=1.2,<2.0",
  "langchain-deepseek>=1.0,<2.0",
  "openai>=2.26,<3.0",
  "pypdf>=4.0,<5.0",
  "pymupdf>=1.24,<2.0",
  "python-pptx>=0.6,<1.0",
  "python-docx>=1.1,<2.0",
  "jsonschema>=4,<5",
  # 工具
  "python-dotenv>=1.2,<2.0",
  "pydantic-settings>=2.4,<3.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
]

[tool.setuptools.packages.find]
include = ["server*", "schemas*"]

[tool.setuptools.package-data]
"schemas.parse" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = "-q"
pythonpath = ["."]
